# controllers/CustomerController.go
@@ -14,11 +14,11 @@ type CustomerHandler struct {
 // @accept json
 // @produce json
 // @param id path int true "id of customer to be gotten"
-// @response 200 {object} model.Customer "OK"
-// @response 400 {object} model.Response "Bad Request"
-// @response 401 {object} model.Response "Unauthorized"
-// @response 409 {object} model.Response "Conflict"
-// @response 500 {object} model.Response "Internal Server Error"
+// @response 200 {object} models.Customer "OK"
+// @response 400 {object} models.Response "Bad Request"
+// @response 401 {object} models.Response "Unauthorized"
+// @response 409 {object} models.Response "Conflict"
+// @response 500 {object} models.Response "Internal Server Error"
 // @Router /api/v1/customers/:id [get]
 func (h *CustomerHandler) GetCustomer(c *gin.Context) {
 	//Logic goes here
@@ -32,11 +32,11 @@ func (h *CustomerHandler) GetCustomer(c *gin.Context) {
 // @id ListCustomers
 // @accept json
 // @produce json
-// @response 200 {object} model.Customers "OK"
-// @response 400 {object} model.Response "Bad Request"
-// @response 401 {object} model.Response "Unauthorized"
-// @response 409 {object} model.Response "Conflict"
-// @response 500 {object} model.Response "Internal Server Error"
+// @response 200 {object} models.Customers "OK"
+// @response 400 {object} models.Response "Bad Request"
+// @response 401 {object} models.Response "Unauthorized"
+// @response 409 {object} models.Response "Conflict"
+// @response 500 {object} models.Response "Internal Server Error"
 // @Router /api/v1/customers [get]
 func (h *CustomerHandler) ListCustomers(c *gin.Context) {
 	//Logic goes here
@@ -50,11 +50,11 @@ func (h *CustomerHandler) ListCustomers(c *gin.Context) {
 // @id CreateCustomer
 // @accept json
 // @produce json
-// @param Customer body model.CustomerForCreate true "Customer data to be created"
-// @response 200 {object} model.Response "OK"
-// @response 400 {object} model.Response "Bad Request"
-// @response 401 {object} model.Response "Unauthorized"
-// @response 500 {object} model.Response "Internal Server Error"
+// @param Customer body models.CustomerForCreate true "Customer data to be created"
+// @response 200 {object} models.Response "OK"
+// @response 400 {object} models.Response "Bad Request"
+// @response 401 {object} models.Response "Unauthorized"
+// @response 500 {object} models.Response "Internal Server Error"
 // @Router /api/v1/customers [post]
 func (h *CustomerHandler) CreateCustomer(c *gin.Context) {
 	//Logic goes here
@@ -69,10 +69,10 @@ func (h *CustomerHandler) CreateCustomer(c *gin.Context) {
 // @accept json
 // @produce json
 // @param id path int true "id of customer to be deleted"
-// @response 200 {object} model.Response "OK"
-// @response 400 {object} model.Response "Bad Request"
-// @response 401 {object} model.Response "Unauthorized"
-// @response 500 {object} model.Response "Internal Server Error"
+// @response 200 {object} models.Response "OK"
+// @response 400 {object} models.Response "Bad Request"
+// @response 401 {object} models.Response "Unauthorized"
+// @response 500 {object} models.Response "Internal Server Error"
 // @Router /api/v1/customers/:id [delete]
 func (h *CustomerHandler) DeleteCustomer(c *gin.Context) {
 	//Logic goes here
@@ -87,11 +87,11 @@ func (h *CustomerHandler) DeleteCustomer(c *gin.Context) {
 // @accept json
 // @produce json
 // @param id path int true "id of customer to be updated"
-// @param Customer body model.CustomerForUpdate true "Customer data to be updated"
-// @response 200 {object} model.Response "OK"
-// @response 400 {object} model.Response "Bad Request"
-// @response 401 {object} model.Response "Unauthorized"
-// @response 500 {object} model.Response "Internal Server Error"
+// @param Customer body models.CustomerForUpdate true "Customer data to be updated"
+// @response 200 {object} models.Response "OK"
+// @response 400 {object} models.Response "Bad Request"
+// @response 401 {object} models.Response "Unauthorized"
+// @response 500 {object} models.Response "Internal Server Error"
 // @Router /api/v1/customers/:id [patch]
 func (h *CustomerHandler) UpdateCustomer(c *gin.Context) {
 	//Logic goes here
