# docs/swagger.json
@@ -45,32 +45,32 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.Book"
+                                "$ref": "#/definitions/models.Book"
                             }
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -99,31 +99,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Customers"
+                            "$ref": "#/definitions/models.Customers"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -153,7 +153,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CustomerForCreate"
+                            "$ref": "#/definitions/models.CustomerForCreate"
                         }
                     }
                 ],
@@ -161,25 +161,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -217,31 +217,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Customer"
+                            "$ref": "#/definitions/models.Customer"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -277,25 +277,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -332,7 +332,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CustomerForUpdate"
+                            "$ref": "#/definitions/models.CustomerForUpdate"
                         }
                     }
                 ],
@@ -340,25 +340,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/model.Response"
+                            "$ref": "#/definitions/models.Response"
                         }
                     }
                 }
@@ -394,7 +394,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Transaction"
+                            "$ref": "#/definitions/models.Transaction"
                         }
                     }
                 }
@@ -412,7 +412,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.Product"
+                            "$ref": "#/definitions/models.Product"
                         }
                     }
                 }
@@ -430,7 +430,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 }
@@ -438,7 +438,7 @@
         }
     },
     "definitions": {
-        "model.Book": {
+        "models.Book": {
             "type": "object",
             "properties": {
                 "author": {
@@ -452,7 +452,7 @@
                 }
             }
         },
-        "model.Customer": {
+        "models.Customer": {
             "type": "object",
             "required": [
                 "email",
@@ -501,7 +501,7 @@
                 }
             }
         },
-        "model.CustomerForCreate": {
+        "models.CustomerForCreate": {
             "type": "object",
             "required": [
                 "email",
@@ -545,7 +545,7 @@
                 }
             }
         },
-        "model.CustomerForUpdate": {
+        "models.CustomerForUpdate": {
             "type": "object",
             "required": [
                 "email",
@@ -582,18 +582,18 @@
                 }
             }
         },
-        "model.Customers": {
+        "models.Customers": {
             "type": "object",
             "properties": {
                 "customers": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/model.Customer"
+                        "$ref": "#/definitions/models.Customer"
                     }
                 }
             }
         },
-        "model.Product": {
+        "models.Product": {
             "type": "object",
             "properties": {
                 "id": {
@@ -621,7 +621,7 @@
                 }
             }
         },
-        "model.Response": {
+        "models.Response": {
             "type": "object",
             "properties": {
                 "code": {
@@ -634,7 +634,7 @@
                 }
             }
         },
-        "model.Transaction": {
+        "models.Transaction": {
             "type": "object",
             "properties": {
                 "change": {
@@ -671,7 +671,7 @@
                 }
             }
         },
-        "model.User": {
+        "models.User": {
             "type": "object",
             "required": [
                 "password",
